Add executeIndexedStatementBatch